[tool.poetry]
name = "ytmusicplaylistimporter"
version = "0.1.0"
description = "Tool for importing playlist to youtube music."
authors = ["VChiaL626 <kimish626@gmail.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
ytmusicapi = "^0.24.0"
tqdm = "^4.64.1"
zhconv = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
